--- a/homework/calc3/assign1q3.tex
+++ b/homework/calc3/assign1q3.tex
@@ -1,6 +1,6 @@
 \documentclass{article}
 
-\begin{article}
+\begin{document}
     \textbf{Question 3:} The surface $z=\sqrt{x+y}$ intersects the plane $y=3$ along a curve $C$. Find the parametric equations for the tangent line to this curve at the point $P(1,3,2)$.
 \\
 \[ z = \sqrt{x+y}, y=3 \rightarrow z = \sqrt{x+3} \rightarrow z' = \frac{2(x+3)+x}{2\sqrt{x+3}} = \frac{3(x+2)}{2\sqrt{x+3}} \]
