fixed circuits pset

--- a/homework/circuits/pset1.tex
+++ b/homework/circuits/pset1.tex
@@ -69,9 +69,9 @@ The dependent voltage source absorbs 32W of power.\\
 
 \textbf{Question 5:} Find \textit{V\textsubscript{x}} in the network in Figure 3 using Tellegen's theorem.\\
 \\
-Since all elements are in series, they share the same current. So, the sum of the voltages when considering if they are supplying or absorbing power follows.\\
+Since all elements are in series, they share the same current. It follows that:
 Going from left to right:
-\[6+12-24+V_x+16-18=0 \rightarrow V_x = 0 \]
+\[12-24+V_x+16-18+6=0 \rightarrow V_x = 8 \]
 \\
 \textbf{Question 6:} Find $I_x,I_y,$ and $I_z$ in the network shown in Figure 4.
 \\
